app-test/testdata/typesystem/neg/field-access-with-any-type/check/field3.check
testdata/typesystem/neg/field-access-with-any-type/src/field.cal:11:21: error: Not a product.
            OUT <-- n.foo; // error
                    ^